--- a/style.css
+++ b/style.css
@@ -59,7 +59,6 @@ header{
 
 .navbar a:hover{
     color: #dcb192;
-    border-bottom: 0.1rem solid #dcb192;
 }
 
 .navbar ul a.active{
@@ -203,8 +202,19 @@ header{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin: 0 30px;
 }
 
+.newArrivals .product:nth-child(5){
+    display: block;
+}
+
+.newArrivals .product{
+    margin-left: 13px;
+}
+.newArrivals .product{
+    margin-left: 13px;
+}
 
 .product{
     width: 13%;
@@ -213,22 +223,24 @@ header{
     margin: 10px 20px;
     justify-content: space-between;
     background-color: rgb(51, 49, 49);
-    /* border: 1px solid #cce7d0; */
     border-radius: 25px;
     cursor: pointer;
     box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.0);
+}
+.product:hover{
+    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.381);
 }
 
 .product img{
     width: 100%;
     height: 250px;
     border-radius: 20px;
-    box-shadow: 5px 5px 10px rgba(214, 207, 207, 0.333);
-   
+    
 }
 .product img:hover{
     transform: scale(1.05);
     transition: .2s;
+    box-shadow: 0 0 2px 2px rgba(214, 207, 207, 0.333);
 }
 
 .product h2{
@@ -327,28 +339,23 @@ header{
 
 }
 
+
 .newProducts{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-left: 40px;
 }
+
+.newProducts #featuredPro:last-child{
+    display: block;
+}
+
 #featuredPro{
-    margin: 10px 30px;
-
+    margin: 10px 0;
+    
 }
 
-/* .product{
-    width: 13%;
-    min-width: 250px;
-    padding: 10px 50px;
-    margin: 10px 20px;
-    justify-content: space-between;
-    background-color: rgb(51, 49, 49);
-    /* border: 1px solid #cce7d0; */
-    border-radius: 25px;
-    cursor: pointer;
-    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.0);
-} */
 
 .product{
     width: 13%;
@@ -356,7 +363,7 @@ header{
     padding: 10px 50px;
     border-radius: 25px;
     cursor: pointer;
-    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.0);
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.0);
 }
 
 .product img{
@@ -631,10 +638,9 @@ header{
     min-width: 250px;
     padding: 10px 12px;
     margin: 10px 0;
-    border: 1px solid #cce7d0;
     border-radius: 25px;
     cursor: pointer;
-    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.0);
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.0);
 }
 
 .product img{
@@ -803,20 +809,8 @@ header{
     color: #818ea0;
 }
 
-.contactDetails .details li i:nth-child(1){
+.contactDetails .details li i{
     color: lightblue;
-}
-.contactDetails .details li i:nth-child(2){
-    color: lightblue;
-}
-.contactDetails .details li i:nth-child(3){
-    color: lightcoral;
-}
-.contactDetails .details li i:nth-child(4){
-
-}
-.contactDetails .details li i:nth-child(5){
-    color: rgb(48, 48, 191);
 }
 
 .contactDetails .details p{
@@ -883,7 +877,6 @@ header{
 }
 
 .formcontainer .links{
-    /* border: 1px solid white; */
     padding: 50px 20px;
 }
 
@@ -895,12 +888,27 @@ header{
 }
 
 .formcontainer .links li i{
-    font-size: 18px;
-    margin-right: 15px;
+    font-size: 15px;
+    margin-right: 10px;
+}
+.formcontainer .links li #one{
+   color: #0703f5;
+}
+.formcontainer .links li #two{
+   color: #4079ea;
+}
+.formcontainer .links li #three{
+   color: #fd3262;
+}
+.formcontainer .links li #four{
+   color: #983789;
+}
+.formcontainer .links li #five{
+   color: #0300a3;
 }
 
 .formcontainer .links li p{
-    font-size: 25px;
+    font-size: 20px;
     color: #818ea0;
 }
 
@@ -1290,12 +1298,12 @@ header{
 }
 
 .formcontainer .links li p {
-    font-size: 18px;
+    font-size: 15px;
 }
 
 .formcontainer .links li i {
     font-size: 15px;
-    margin-right: 10px;
+    margin-right: 5px;
 }
 
 
@@ -1637,11 +1645,11 @@ header{
     }
 
     .formcontainer .links li p {
-        font-size: 14px;
+        font-size: 12px;
     }
 
     .formcontainer .links li i {
-        font-size: 12px;
-        margin-right: 8px;
+        font-size: 10px;
+        margin-right: 5px;
     }
 }
