--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ header{
 /* Featured Products */
 
 .FeaturedProducts{
-    margin: 35px 0;
+    margin: 25px 10px;
 }
 
 .FeaturedProducts h1{
@@ -344,7 +344,7 @@ header{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    /* margin-left: 40px; */
+    margin-left: 30px;
 }
 
 .newProducts #featuredPro:last-child{
@@ -1043,6 +1043,10 @@ header{
         font-size: 30px;
     }
 
+    .newProducts{
+        margin: 0px 30px;
+    }
+
 /* banner */
     .banner {
         margin: 50px 50px;
@@ -1641,15 +1645,15 @@ header{
 
 
     .formcontainer .links {
-        padding: 20px 0;
+        padding: 20px 20px;
     }
 
     .formcontainer .links li p {
-        font-size: 12px;
+        font-size: 10px;
     }
 
     .formcontainer .links li i {
-        font-size: 10px;
+        font-size: 8px;
         margin-right: 5px;
     }
 }
