--- a/style.css
+++ b/style.css
@@ -1529,8 +1529,12 @@ header{
         display: none;
         flex-direction: column;
     }
+    .newArrivals{
+        margin-right: 8px;
+    }
     .newProducts{
         margin: 25px 0px;
+        margin-right: 8px;
     }
     .newsletter {
         line-height: 25px;
@@ -1656,6 +1660,7 @@ header{
 
     .formcontainer .links li i {
         font-size: 8px;
-        margin-right: 5px;
+        margin-right: 2px;
+        margin-left: 5px;
     }
 }
